// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`merge postcss options when postcss-loader is v5 should convert default options in rax correctly 1`] = `
Object {
  "implementation": [Function],
  "postcssOptions": Object {
    "plugins": Array [
      [Function],
      [Function],
      [Function],
    ],
  },
  "sourceMap": true,
}
`;

exports[`merge postcss options when postcss-loader is v5 should convert root options correctly 1`] = `
Object {
  "implementation": [Function],
  "postcssOptions": Object {
    "exec": true,
    "map": false,
    "parser": "sugarss",
    "plugins": Array [
      [Function],
      [Function],
      [Function],
    ],
    "sourceMap": false,
    "stringifier": "midas",
    "syntax": "sugarss",
  },
  "sourceMap": true,
}
`;

exports[`merge postcss options when postcss-loader is v5 should merge plugin correctly 1`] = `
Object {
  "implementation": [Function],
  "postcssOptions": Object {
    "plugins": Array [
      [Function],
      [Function],
    ],
  },
  "sourceMap": true,
}
`;
